# lynse-desktop

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  PLAN1.md  README.md  THIRD_PARTY_NOTICES.md  infographic-summary-preview.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  share-page-layout.html  turbo.json
.github/workflows/: release.yml
.playwright-cli/: page-2026-07-06T05-20-21-377Z.yml  page-2026-07-12T17-12-32-917Z.yml  page-2026-07-12T17-12-43-978Z.yml
.qoder/specs/: 录音上传转写总结流程_task-81d.md
.venv-funasr/: pyvenv.cfg
ColaMD-main/: .gitignore  CLAUDE.md  LICENSE  electron.vite.config.ts  package-lock.json  tsconfig.json  tsconfig.main.json  tsconfig.preload.json  tsconfig.renderer.json
ColaMD-main/.github/workflows/: release.yml
apps/desktop/: electron-builder.yml  electron.vite.config.ts  package.json  tsconfig.web.json
apps/desktop/resources/: funasr_transcribe.py
apps/tauri/: .gitignore  index.html  package.json  tsconfig.json  vite.config.ts
apps/tauri/src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
apps/tauri/src-tauri/capabilities/: default.json
apps/tauri/src-tauri/icons/: icon.icns
apps/tauri/src-tauri/resources/: funasr_transcribe.py
apps/tauri/src-tauri/src/: lib.rs  live_translation.rs  live_translation_stub.rs  main.rs  stt.rs
apps/web/: next.config.ts  package.json  tsconfig.json
docs/: humla-vs-lynse-comparison.md  live-translation-backend.md  lynclaw-integration-feasibility.md
plans/: 001-reduced-motion-coverage.md  002-basecss-motion-tokens.md  003-overlay-motion-cohesion.md  004-chat-panel-slide-in.md  README.md
skills/lynse-cli/: .env.example  .gitignore  SKILL.md  api_wrapper.sh  install.ps1  install.sh  lynse.bat  lynse.py  lynse_cli.py  lynse_unified.sh  package.json
(+909 files in other folders)
