[package]
name = "lynse-tauri"
version = "0.1.0"
description = "Lynse macOS desktop shell"
authors = ["Lynse"]
edition = "2021"

[lib]
name = "lynse_tauri"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
mime_guess = "2"
percent-encoding = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
thiserror = "2"
uuid = { version = "1", features = ["v4"] }
