[package]
name = "lynse-tauri"
version = "0.1.16"
description = "Lynse macOS desktop shell"
authors = ["Lynse"]
edition = "2021"

[lib]
name = "lynse_tauri"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[profile.release]
strip = "none"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
futures-util = "0.3"
keyring = "3"
libc = "0.2"
mime_guess = "2"
percent-encoding = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
thiserror = "2"
tokio = { version = "1", features = ["macros", "net", "rt", "sync", "time"] }
tokio-tungstenite = { version = "0.28", features = ["native-tls"] }
uuid = { version = "1", features = ["v4"] }

# macOS-only: EventKit bridge for system calendar integration.
[target.'cfg(target_os = "macos")'.dependencies]
highlandcows-eventkit = "0.5.8"
